# RiverCleanupRobot

2020_Working_Vehicle/2020_Working_Vehicle/: README.txt  launch_sim.sh  meta_vehicle_sim.moos  plug_pShare.moos
WorkingVehicle/: README.txt  launch_shore.sh  launch_sim.sh  meta_kf2.bhv  meta_shoreside.moos  meta_vehicle (another copy).bhv  meta_vehicle (copy).bhv  meta_vehicle.bhv  meta_vehicle_sim.moos  plug_iActuationKF_archie.moos  plug_iGPS_KF.moos  plug_iOS5000.moos  plug_origin_warp.moos  plug_pBrains.moos  plug_pLogger.moos  plug_uFldNodeBroker.moos
pBrains/: CMakeLists.txt  main.cpp  pBrains.cpp  pBrains.h
wEyes VS Source/: DepthBasics-D2D.sln  DepthBasics-D2D.vcxproj  DepthBasics.cpp  DepthBasics.h  hm_lut.cpp  hm_lut.h
